<resources>
    <string name="app_name">Realm + {injection, rx, test}</string>
    <string name="user_list">User List</string>
    <string name="user_profile">User Profile</string>
    <string name="user_icon">User icon</string>
    <string name="profile_icon">Profile icon</string>
    <string name="clear">Clear</string>
    <string name="userId">userId = %d</string>
    <string name="name"><b>Name = </b></string>
    <string name="email"><b>Email = </b></string>
    <string name="github_user_login_key">gitHubUserLoginKey</string>
    <string name="github_user_avatarUrl_key">gitHubUserAvatarUrlKey</string>
    <string name="clear_user_list">Cleared user list from Realm</string>
    <string name="clear_user_profile">Cleared Profile data from Realm</string>
    <string name="profile_fragment">profile_fragment</string>
    <string name="enter_id">Enter id, which will update in UserList</string>
    <string name="edit_id">Edit id</string>
    <string name="enter_name">Enter name, which will update in Profile</string>
    <string name="edit_name">Edit name</string>
    <string name="no_user_data_available">No User Data Available\nThere are three things you can do\n1.Pull to refresh to try again\n2.Enable internet connection and wait, app will reconnect on its own\n3. Use SnackBar Retry button</string>
</resources>
